@@ -2,8 +2,9 @@ apport (0.12) UNRELEASED; urgency=low
 
   * apport-gtk: Make bug report window resizable when the details are
     expanded. Closes: LP#56672
+  * apport_utils.py: Add get_recent_crashes() and a test suite check for it.
 
- -- Martin Pitt <martin.pitt@ubuntu.com>  Thu, 17 Aug 2006 14:36:51 +0200
+ -- Martin Pitt <martin.pitt@ubuntu.com>  Thu, 17 Aug 2006 15:42:49 +0200
 
 apport (0.11) edgy; urgency=low
 
